--- a/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
+++ b/Gastos.Pwa/Components/Pages/PwaSettingsPage.razor
@@ -14,7 +14,7 @@
     </MudText>
 
     <!-- Componente de Estado PWA con Actualizaciones -->
-    <PwaStatusCard />
+    @* <PwaStatusCard /> *@
 
     <MudGrid>
         <!-- Información de Instalación -->
