--- a/Gastos.Pwa/Components/Layout/MainLayout.razor
+++ b/Gastos.Pwa/Components/Layout/MainLayout.razor
@@ -5,7 +5,8 @@
 @inject ThemeService ThemeService
 
 <BreakpointMonitor />
-<PwaUpdateAvailableMonitor />
+<PwaUpdateMonitor />
+@* <PwaUpdateAvailableMonitor /> *@
 
 <MudLayout>
     <AppBar />
