--- a/Gastos.Pwa/Components/Layout/MainLayout.razor
+++ b/Gastos.Pwa/Components/Layout/MainLayout.razor
@@ -5,8 +5,8 @@
 @inject ThemeService ThemeService
 
 <BreakpointMonitor />
-<PwaUpdateMonitor />
-@* <PwaUpdateAvailableMonitor /> *@
+@* <PwaUpdateMonitor /> *@
+<PwaUpdateAvailableMonitor />
 
 <MudLayout>
     <AppBar />
